--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,10 @@ services:
     volumes:
       # Mount your host directory with your custom ocserv.conf, certificates, etc.
       - ./config:/etc/ocserv
-    restart: unless-stopped
+    cap_add:
+      - NET_ADMIN
+      - SYS_MODULE
+    sysctls:
+      - net.ipv4.ip_forward=1
     privileged: true
+    restart: no
