--- a/ocserv.conf
+++ b/ocserv.conf
@@ -124,10 +124,8 @@ socket-file = /var/run/ocserv-socket
 # certificate renewal (they are checked and reloaded periodically;
 # a SIGHUP signal to main server will force reload).
 
-#server-cert = /etc/ocserv/server-cert.pem
-#server-key = /etc/ocserv/server-key.pem
-server-cert = /etc/ocserv/server-cert.pem
-server-key = /etc/ocserv/server-key.pem
+server-cert = /etc/ocserv/certs/server-cert.pem
+server-key = /etc/ocserv/certs/server-key.pem
 
 # Diffie-Hellman parameters. Only needed if for old (pre 3.6.0
 # versions of GnuTLS for supporting DHE ciphersuites.
@@ -154,7 +152,7 @@ server-key = /etc/ocserv/server-key.pem
 # client certificates (public keys) if certificate authentication
 # is set.
 #ca-cert = /etc/ocserv/ca.pem
-ca-cert = ../tests/certs/ca.pem
+#ca-cert = ../tests/certs/ca.pem
 
 # The number of sub-processes to use for the security module (authentication)
 # processes. Typically this should not be set as the number of processes
@@ -763,21 +761,21 @@ camouflage_realm = "Restricted Content"
 # An example virtual host with different authentication methods serviced
 # by this server.
 
-[vhost:www.example.com]
-auth = "certificate"
+# [vhost:www.example.com]
+# auth = "certificate"
 
-ca-cert = ../tests/certs/ca.pem
+# ca-cert = ../tests/certs/ca.pem
 
 # The certificate set here must include a 'dns_name' corresponding to
 # the virtual host name.
 
-server-cert = ../tests/certs/server-cert-secp521r1.pem
-server-key = ../tests/certs/server-key-secp521r1.pem
+# server-cert = ../tests/certs/server-cert-secp521r1.pem
+# server-key = ../tests/certs/server-key-secp521r1.pem
 
-ipv4-network = 192.168.2.0
-ipv4-netmask = 255.255.255.0
+# ipv4-network = 192.168.2.0
+# ipv4-netmask = 255.255.255.0
 
-cert-user-oid = 0.9.2342.19200300.100.1.1
+# cert-user-oid = 0.9.2342.19200300.100.1.1
 
 # HTTP headers
 included-http-headers = Strict-Transport-Security: max-age=31536000 ; includeSubDomains
