--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,11 @@ services:
       - "443:443/tcp"
       - "443:443/udp"
     volumes:
-      # Mount your host directory with your custom ocserv.conf, certificates, etc.
       - ./config:/etc/ocserv
     cap_add:
       - NET_ADMIN
-      - SYS_MODULE
     sysctls:
       - net.ipv4.ip_forward=1
-    privileged: true
+    security_opt:
+      - no-new-privileges:true
     restart: no
