--- a/ocserv.conf
+++ b/ocserv.conf
@@ -31,9 +31,10 @@ ipv4-netmask = 255.255.255.0
 # comment out all routes from the server, or use the special keyword
 # 'default'.
 
-#route = 10.10.10.0/255.255.255.0
 #route = 192.168.0.0/255.255.0.0
 #route = fef4:db8:1000:1001::/64
+#route = 10.10.10.0/255.255.255.0
+#route = 192.168.2.1/255.255.255.0
 route = default
 
 # Subsets of the routes above that will not be routed by
@@ -121,7 +122,7 @@ socket-file = /var/run/ocserv-socket
 isolate-workers = true
 
 # The name to use for the tun device
-device = vpns
+device = ocserv-tun
 
 # Limit the number of clients. Unset or set to zero if unknown. In
 # that case the maximum value is ~8k clients.
