--- a/ocserv.conf
+++ b/ocserv.conf
@@ -31,11 +31,10 @@ ipv4-netmask = 255.255.255.0
 # comment out all routes from the server, or use the special keyword
 # 'default'.
 
-#route = 192.168.0.0/255.255.0.0
-#route = fef4:db8:1000:1001::/64
-#route = 10.10.10.0/255.255.255.0
-#route = 192.168.2.1/255.255.255.0
-route = default
+route = 10.10.10.0/255.255.255.0
+route = 192.168.2.0/255.255.255.0
+#route = default
+# Set dns if you choose default route
 
 # Subsets of the routes above that will not be routed by
 # the server.
@@ -47,9 +46,9 @@ tunnel-all-dns = true
 
 # The advertised DNS server. Use multiple lines for
 # multiple servers.
-# dns = fc00::4be0
-dns = 1.1.1.1
-dns = 8.8.8.8
+#dns = fc00::4be0
+#dns = 1.1.1.1
+#dns = 8.8.8.8
 
 # This option allows you to enable the camouflage feature of ocserv that makes it look
 # like a web server to unauthorized parties.
@@ -195,8 +194,8 @@ log-level = 2
 # STATS_BYTES_OUT, STATS_DURATION that contain a 64-bit counter of the bytes
 # output from the tun device, and the duration of the session in seconds.
 
-#connect-script = /usr/bin/myscript
-#disconnect-script = /usr/bin/myscript
+connect-script = /usr/local/bin/ocserv-connect.sh
+disconnect-script = /usr/local/bin/ocserv-disconnect.sh
 
 # The time (in seconds) that a client is allowed to stay connected prior
 # to authentication
