--- a/ocserv.conf
+++ b/ocserv.conf
@@ -4,7 +4,13 @@ auth = "plain[/etc/ocserv/ocpasswd]"
 # The Certificate Authority that will be used to verify
 # client certificates (public keys) if certificate authentication
 # is set.
-#ca-cert = /etc/ocserv/ca.pem
+#ca-cert = /etc/ocserv/certs/server/ca-cert.pem
+
+# The revocation list of the certificates issued by the 'ca-cert' above.
+# See the manual to generate an empty CRL initially. The CRL will be reloaded
+# periodically when ocserv detects a change in the file. To force a reload use
+# SIGHUP.
+#crl = /etc/ocserv/server/crl.pem
 
 # The object identifier that will be used to read the user ID in the client
 # certificate. The object identifier should be part of the certificate's DN
@@ -102,13 +108,8 @@ run-as-group = ocserv
 # The certificate files will be reloaded when changed allowing for in-place
 # certificate renewal (they are checked and reloaded periodically;
 # a SIGHUP signal to main server will force reload).
-server-cert = /etc/ocserv/certs/server-cert.pem
-server-key = /etc/ocserv/certs/server-key.pem
-
-# socket file used for server IPC (worker-main), will be appended with .PID
-# It must be accessible within the chroot environment (if any), so it is best
-# specified relatively to the chroot directory.
-socket-file = /var/run/ocserv-socket
+server-cert = /etc/ocserv/certs/ssl/server-cert.pem
+server-key = /etc/ocserv/certs/ssl/server-key.pem
 
 # Whether to enable seccomp/Linux namespaces worker isolation. That restricts the number of
 # system calls allowed to a worker process, in order to reduce damage from a
@@ -227,6 +228,11 @@ dpd = 90
 # The mobile clients are distinguished from the header
 # 'X-AnyConnect-Identifier-Platform'.
 mobile-dpd = 1800
+
+# socket file used for server IPC (worker-main), will be appended with .PID
+# It must be accessible within the chroot environment (if any), so it is best
+# specified relatively to the chroot directory.
+socket-file = /var/run/ocserv-socket
 
 # GnuTLS priority string; note that SSL 3.0 is disabled by default
 # as there are no openconnect (and possibly anyconnect clients) using
@@ -425,12 +431,6 @@ try-mtu-discovery = false
 # in the certificate's DN. Useful OIDs are:
 #  OU (organizational unit) = 2.5.4.11
 #cert-group-oid = 2.5.4.11
-
-# The revocation list of the certificates issued by the 'ca-cert' above.
-# See the manual to generate an empty CRL initially. The CRL will be reloaded
-# periodically when ocserv detects a change in the file. To force a reload use
-# SIGHUP.
-#crl = /etc/ocserv/crl.pem
 
 # Uncomment this to enable compression negotiation (LZS, LZ4).
 # To increase security it is recommended to keep it disabled;
