add scripts to manage certificates

--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,10 +1,10 @@
-auth = "plain[/etc/ocserv/ocpasswd]"
-# auth = "certificate"
+# auth = "plain[/etc/ocserv/ocpasswd]"
+auth = "certificate"
 
 # The Certificate Authority that will be used to verify
 # client certificates (public keys) if certificate authentication
 # is set.
-#ca-cert = /etc/ocserv/certs/server/ca-cert.pem
+ca-cert = /etc/ocserv/certs/ca-cert.pem
 
 # The object identifier that will be used to read the user ID in the client
 # certificate. The object identifier should be part of the certificate's DN
@@ -16,7 +16,7 @@ cert-user-oid = 0.9.2342.19200300.100.1.1
 # See the manual to generate an empty CRL initially. The CRL will be reloaded
 # periodically when ocserv detects a change in the file. To force a reload use
 # SIGHUP.
-#crl = /etc/ocserv/data/certs/server/crl.pem
+crl = /etc/ocserv/certs/crl.pem
 
 # Specify alternative authentication methods that are sufficient
 # for authentication. That is, if set, any of the methods enabled
@@ -117,8 +117,8 @@ run-as-group = ocserv
 # The certificate files will be reloaded when changed allowing for in-place
 # certificate renewal (they are checked and reloaded periodically;
 # a SIGHUP signal to main server will force reload).
-server-cert = /etc/ocserv/certs/ssl/server-cert.pem
-server-key = /etc/ocserv/certs/ssl/server-key.pem
+server-cert = /etc/ocserv/certs/server-cert.pem
+server-key = /etc/ocserv/certs/server-key.pem
 
 # Whether to enable seccomp/Linux namespaces worker isolation. That restricts the number of
 # system calls allowed to a worker process, in order to reduce damage from a
